# BookBot

./: .gitignore  README.md  main.py  pyproject.toml
books/: books_info.py
books/books/: fear_and_loathing_in_las_vegas.txt  martian_chronicles.txt  martin_eden.txt
config/: config.py
filters/: filters.py
handlers/: other_handlers.py  user_handlers.py
keyboards/: bookmarks_kb.py  keyboards.py  pagination_kb.py  set_menu.py
lexicon/: lexicon_ru.py
services/: file_handling.py  utilities.py
state/: state.py
