[tool.poetry]
name = "bookbot"
version = "0.1.0"
description = ""
authors = ["Ilya Pashutin <carn2010@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
